# ZJU-OOP-2024-ADIF

./: .editorconfig  CMakeLists.txt  README.md
examples/: chinese.adif  invalid.adif  test.in  test0.adif  test1.adif  test2.adif
include/: adif.hpp
src/: adif.cpp  cli.cpp  tui.cpp
